--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -8,5 +8,16 @@
 </head>
 <body>
     <h1>Carbonara</h1>
+    <img src="https://www.mamablip.com/ir/800/storage/Traditional-Spaghetti-alla-Carbonara_1131611747132.jpg">
+    <h3>Description</h3>
+    <p>Carbonara is a pasta dish made with eggs, cheese, pork and black pepper. The dish originated in Italy.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Eggs</li>
+        <li>Hard cheese</li>
+        <li>Pork</li>
+        <li>Black pepper</li>
+    </ul>
+
 </body>
 </html>
