--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -13,11 +13,18 @@
     <p>Carbonara is a pasta dish made with eggs, cheese, pork and black pepper. The dish originated in Italy.</p>
     <h3>Ingredients</h3>
     <ul>
-        <li>Eggs</li>
-        <li>Hard cheese</li>
-        <li>Pork</li>
-        <li>Black pepper</li>
+        <li>300g Spaghetti</li>
+        <li>120g Pancetta</li>
+        <li>2tsp Olive oil</li>
+        <li>1 Garlic</li>
+        <li>1 Egg</li>
+        <li>50g Parmesan</li> 
     </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Boil the pasta. Meanwhile, fry pancetta in oil in a frying pan for a few mins until golden and crisp. Add garlic, fry for 1 min, then turn off the heat. Briefly whisk egg and yolks with most of the Parmesan and some seasoning.</li>
+        <li>Drain pasta, reserving a little of the cooking water. Add eggs and a tbsp of cooking water, then mix until pasta is coated and creamy. The heat from the pasta will gently cook the sauce. Stir in the pancetta and garlic then serve, topped with the remaining Parmesan.</li>
+    </ol>
 
 </body>
 </html>
