--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="Carbonara.html">Carbonara</a>
+    <a href="recipes/carbonara.html">Carbonara</a>
 </body>
 </html>
