--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Carbonara</title>
+    <link rel="stylesheet" href="styles.css"
 </head>
 <body>
     <h1>Carbonara</h1>
-    <img src="https://www.mamablip.com/ir/800/storage/Traditional-Spaghetti-alla-Carbonara_1131611747132.jpg">
+    <div>
+        <img src="https://www.mamablip.com/ir/800/storage/Traditional-Spaghetti-alla-Carbonara_1131611747132.jpg">
+    </div>
     <h3>Description</h3>
     <p>Carbonara is a pasta dish made with eggs, cheese, pork and black pepper. The dish originated in Italy.</p>
     <h3>Ingredients</h3>
